# open2dholo

./: .gitignore  .gitmodules  Cargo.toml  CriticalError.tscn  HSplitContainer2.tscn  LICENSE  Model.tscn  Open2DH.tscn  Open2DHolo.tscn  README.md  ViewportHolder.gdns  build.rs  open2dh_lib.gdnlib  open2dholo_lib.gdnlib  project.godot  requirements.txt  test_wrld.tscn
GDNative/: AboutDialog.gdns  CameraInputPreview.gdns  ErrorQuitter.gdns  HelpMenuButton.gdns  Open2DHolo.gdns  PreviewViewport.gdns  SettingsDialog.gdns
src/: input_processer.rs  lib.rs  main.rs  model_tree_edit.rs  open2dhctrl.rs  process_packet.rs  thread_packet.rs
src/GDNative/: AboutDialog.gdns  EditMenuButton.gdns  FileMenuButton.gdns  HelpMenuButton.gdns  ModelTreeEditor.gdns  Open2DH.gdns  Open2DHolo.gdns  SettingsDialog.gdns  ViewportHolder.gdns  WebcamInputEditor.gdns
src/GDScript/: Open2DH.gd  scene_tree_edit.gd
src/configuration/: mod.rs  processing_config.rs  user_config.rs
src/error/: config_error.rs  conversion_error.rs  invalid_device_error.rs  mod.rs  model_error.rs  processing_error.rs  thread_send_message_error.rs
src/nodes/: about_dialog.rs  camera_input_preview.rs  error_alert_dialog.rs  error_quitter.rs  mod.rs  model_tree_edit.rs  open2dhctrl.rs  open2dholoctrl.rs  preview_viewport.rs  settings_dialog.rs  upper_tab_popups.rs  util.rs  viewport_holder.rs  webcam_input_edit.rs
src/nodes/editor_tabs/: mod.rs  model_tree_edit.rs  util.rs  webcam_input_edit.rs
src/nodes/main/: mod.rs  open2dhctrl.rs
src/nodes/viewports/: mod.rs  viewport_holder.rs
src/processing/: device_description.rs  gaze_processing.rs  input_processer.rs  input_processor.rs  mod.rs  pnp.rs  process_packet.rs  thread_packet.rs
src/processing/face_detector/: README.md  face_align.rs  facial_existance.rs  head_pose.rs  mod.rs  util_funcs.rs
src/processing/face_detector/detectors/: mod.rs  util.rs
src/processing/face_detector/detectors/dlib/: dlib_detector.rs  mod.rs
src/processing/face_detector/detectors/face_alignment/: mod.rs  sfd_detector.rs
src/processing/face_detector/detectors/sfd/: detect.rs  mod.rs  sfd_detector.rs
src/processing/face_detector/python/: facealign.py
src/util/: device.rs  macros.rs  misc.rs  mod.rs  model.rs  model_kinematics.rs  packet.rs
src/util/camera/: camera_device.rs  device.rs  device_utils.rs  enumerate.rs  mod.rs  webcam.rs
