[package]
name = "open2dholo"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# with every dependency added we get closer and closer to NPM levels of dependency

[dependencies]
parking_lot = "0.11.1"
flume = "0.10.3"
lazy_static = "1.4.0"
thiserror = "1.0.24"
ron = "0.6.4"
usb_enumeration = "0.1.1"
regex = "1.4.5"
image = "0.23.14"
dirs = "3.0.1"
k = "0.24.0"
gltf = "0.15.2"
json = "0.12.4"
serde_json = "1.0.64"
walkdir = "2.3.2"
once_cell = "1.7.2"
# faster = "0.5.2"

[dependencies.serde]
version = "1.0.25"
features = ["derive"]

[dependencies.ouroboros]
version = "0.9.0"

[dependencies.rusty_pool]
version = "0.5.1"
default-features = false

[dependencies.opencv]
version = "0.53.0"
features = ["clang-runtime"]

[dependencies.uvc]
version = "0.2.0"
features = ["vendor"]

[dependencies.gdnative]
version = "0.9.3"

[dependencies.v4l]
version = "0.12.0"
features = ["v4l2-sys"]

[dependencies.native-dialog]
version = "0.5.5"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[dependencies.facial-processing]
git = "https://github.com/l1npengtul/facial-processing-rs.git"
branch = "senpai"
features = ["dlib"]

[build-dependencies]
cargo_metadata = "0.13.1"

[lib]
crate-type = ["cdylib"]
