[package]
name = "open2dholo"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# with every dependency added we get closer and closer to NPM levels of dependency

[dependencies]
flume = "0.10.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"
usb_enumeration = "0.1.1"
ron = "0.6.0"
image = "0.23.14"
dirs = "3.0.1"
gltf = "0.16.0"
json = "0.12.4"
serde_json = "1.0.64"
walkdir = "2.3.2"
dlib-face-recognition = "0.1.7"
mozjpeg = "0.8.24"
nalgebra = "0.26.2"
euclid = "0.22.3"
cv = "0.6.0"
arrayvec = "0.4.12"
gltf-json = "0.16.0"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]

[dependencies.ouroboros]
version = "0.9.1"

[dependencies.opencv]
version = "0.53.0"
features = ["clang-runtime"]

[dependencies.uvc]
version = "0.2.0"
features = ["vendor"]

[dependencies.gdnative]
version = "0.9.3"

[dependencies.v4l]
version = "0.12.0"
features = ["v4l2-sys"]

[dependencies.cv-convert]
version = "0.7"
default-features = false
features = ["opencv", "nalgebra"]

[dependencies.native-dialog]
version = "0.5.5"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[dependencies.facial-processing]
git = "https://github.com/l1npengtul/facial-processing-rs.git"
branch = "senpai"
features = ["dlib"]

[build-dependencies]

[lib]
crate-type = ["cdylib"]
